--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.43.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-donut-chart": "^1.3.3",
     "react-icons": "^4.11.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
